5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1723_2503.log
== TEST (2019-05-13 22:14:31) 
-- CODE:
n = int(input("Digite um numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((4) / (2 * i + 1)) * (-1) ** i
	i = i + 1
print(round(soma, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 22:14:39) 
-- CODE:
n = int(input("Digite um numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((4) / (2 * i + 1)) * (-1) ** i
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.209018
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:06:15) 
-- CODE:
n = int(input("Digite um numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((4 / (2 * i + 1)) * (-1) ** i
	i = i + 1
print(round(soma, 8))
-- ERROR:
File "XXXX", line 8
    i = i + 1
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-14 11:07:28) 
-- CODE:
n = int(input("Digite um numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((-1) ** i) * (4 / (2 * i + 1))
	i = i + 1
print(round(soma, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-14 11:07:34) 
-- CODE:
n = int(input("Digite um numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((-1) ** i) * (4 / (2 * i + 1))
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.133712
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-15 21:44:46) 
-- CODE:
n = int(input("Digite o numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((-1) ** i) * (4 / (2 * i + 1))
	i = i + 1
print(round(soma, 8))
-- OUTPUT:
3.13423981
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-15 21:44:50) 
-- CODE:
n = int(input("Digite o numero: "))

soma = 0
i = 0

while(i < n):
	soma = soma + ((-1) ** i) * (4 / (2 * i + 1))
	i = i + 1
print(round(soma, 8))
-- EXECUTION TIME:
0.186675
-- TEST CASE 1:
---- input:
136
---- correct output:
3.13423981
---- user output:
3.13423981
-- TEST CASE 2:
---- input:
22
---- correct output:
3.09616153
---- user output:
3.09616153
-- TEST CASE 3:
---- input:
15
---- correct output:
3.20818565
---- user output:
3.20818565
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
